# qubes-video-companion

./: .gitignore  .gitlab-ci.yml  .pylintrc  .qubesbuilder  Dockerfile  Makefile  Makefile.builder  README.md
.github/workflows/: ci.yml
ci/test-packages/: qubesdb.py
core3ext/: pyproject.toml
core3ext/qvc/: __init__.py
debian/: changelog  control  rules
desktop/: qubes-video-companion-screenshare.desktop  qubes-video-companion-webcam.desktop
doc/: pipeline.md  qubes-video-companion.rst
qubes-rpc/policies/: 90-default-video-companion.policy  qvc.ScreenShare  qvc.Webcam
qubes-rpc/services/: qvc.ScreenShare  qvc.Webcam  qvc.WebcamAttach  qvc.WebcamDetach
receiver/: common.sh  destroy.py  destroy.sh  qubes-video-companion  qubes-video-companion-webcam@.service  qubes-video-companion.modprobe  qubes-video-companion.privleap  qubes-video-companion.rules  qubes-video-companion.sudoers  receiver.py  setup.py  setup.sh
rpm_spec/: qubes-video-companion-dom0.spec.in  qubes-video-companion.spec.in
scripts/: dkms-skip.conf  udev-handler
scripts/webcam-formats/: main.py  webcam_formats.py
sender/: screenshare.py  service.py  tray_icon.py  udev.rules  webcam.py
tests/: setup.py
tests/qvctests/: integ.py
